--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://it-Lilya.github.io/ut",
+  "homepage": "https://it-Lilya.github.io/booking-system",
   "name": "ut",
   "version": "0.1.0",
   "private": true,
