--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "devDependencies": {
     "date-fns": "^2.30.0",
     "react-calendar": "^4.3.0",
+    "react-id-generator": "^3.0.2",
     "react-router-dom": "^6.14.1"
   }
 }
